Add delete player method